# cmake-new

./: .clang-format  CMakeLists.txt  README.md
cmake/: CppcheckCodeAnalysis.cmake  Prelude.cmake  TargetDefaultCompileOptions.cmake
misc/: .clang-format  .gitignore  CMakeLists.txt  init.sh
misc/include/: mylib.hpp
misc/src/: main.cpp  mylib.cpp
misc/tests/: common.hpp  mytest.cpp
src/: allocator.cpp  match.cpp  matcher.cpp  the_project_name.cpp
tests/: cmdline_test.cpp  simple_test.cpp
